Rfactor: Refatora as tabelas de baldutti para encaixar na proposta de seu aplicativo de skate
